package comportement.visitor.eni;

public interface Visiteur {
    void visite(SocieteSansFiliale societe);
    void visite(SocieteMere societe);

}
